--- a/04_Regional_Climate_Trends/Guides/1_Obtaining_State_Weather_Data.tex
+++ b/04_Regional_Climate_Trends/Guides/1_Obtaining_State_Weather_Data.tex
@@ -115,6 +115,8 @@ I have created a bunch of functions, which can then be used to collect Let's try
 
 The following functions are used to select the weather stations, download data, and read into R.
 
+Run the Guide1.R code and the functions will be loaded into your environment automatically.
+
 \begin{description}
 
 \item[Subset Inventory Data with my.state]  
